fix: Increased OnboardBlocker z-index to hide Blockly Toolbox.

--- a/preact-demo/packages/onboard-blocker/OnboardBlocker.sass
+++ b/preact-demo/packages/onboard-blocker/OnboardBlocker.sass
@@ -13,6 +13,6 @@
         top:            0
         width:          100%
         height:         100%
-        z-index:        2
+        z-index:        $z_index_onboard_blocker
         background:     $white
         opacity:        0.5
